--- a/css/css-anchor-position/anchor-position-dynamic-002.html
+++ b/css/css-anchor-position/anchor-position-dynamic-002.html
@@ -41,7 +41,7 @@
     <div class="target" style="width: anchor-size(--a2 width)" data-expected-width=5></div>
   </div>
 <script>
-checkLayout('.target');
+checkLayout('.target', false);
 container.classList.add('after');
 for (const element of document.getElementsByClassName('target')) {
   if (element.dataset.offsetX === '5')
