be more explicit about checkLayout call

--- a/css/css-anchor-position/anchor-position-dynamic-002.html
+++ b/css/css-anchor-position/anchor-position-dynamic-002.html
@@ -49,6 +49,6 @@ for (const element of document.getElementsByClassName('target')) {
   if (element.dataset.expectedWidth === '5')
     element.dataset.expectedWidth = '10';
 }
-checkLayout('.after .target');
+checkLayout('.after .target', true);
 </script>
 </body>
