add checkLayoutDelayed wrapper

--- a/css/css-anchor-position/anchor-name-001.html
+++ b/css/css-anchor-position/anchor-name-001.html
@@ -21,7 +21,7 @@
   background: lime;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <!--
     All targets should find the 10px anchor, because it's the first
     one in the pre-order DFS from the `relpos`.
