--- a/css/css-anchor-position/anchor-name-002.html
+++ b/css/css-anchor-position/anchor-name-002.html
@@ -24,7 +24,7 @@
   background: lime;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="relpos">
     <div>
       <div class="relpos">
