--- a/css/css-anchor-position/anchor-name-003.html
+++ b/css/css-anchor-position/anchor-name-003.html
@@ -25,7 +25,7 @@
   background: lime;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <!-- In-flow and out-of-flow boxes in a containing block. -->
   <div class="relpos">
     <div>
