--- a/css/css-anchor-position/anchor-name-inline-001.html
+++ b/css/css-anchor-position/anchor-name-inline-001.html
@@ -37,7 +37,7 @@
   background: lime;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="container relpos xcolumns">
     <div style="height: 150px"></div>
     <div class="relpos">
