--- a/css/css-anchor-position/anchor-name-multicol-001.html
+++ b/css/css-anchor-position/anchor-name-multicol-001.html
@@ -39,7 +39,7 @@
   opacity: .3;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="columns">
     <div class="relpos">
       <div class="spacer"></div>
