--- a/css/css-anchor-position/anchor-position-001.html
+++ b/css/css-anchor-position/anchor-position-001.html
@@ -42,7 +42,7 @@
   height: 100px;
 }
 </style>
-<body onload="checkLayout('#target')">
+<body onload="checkLayoutDelayed('#target')">
   <div id="container">
     <div id="a1"></div>
     <div id="a2"></div>
