--- a/css/css-anchor-position/anchor-position-003.html
+++ b/css/css-anchor-position/anchor-position-003.html
@@ -33,7 +33,7 @@
   order.
   https://drafts.csswg.org/css-anchor-1/#determining
 -->
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="cb">
     <div class="anchor1 size5x7"></div>
     <div class="anchor1 size9x11"></div>
