--- a/css/css-anchor-position/anchor-position-004.html
+++ b/css/css-anchor-position/anchor-position-004.html
@@ -31,7 +31,7 @@
   position: absolute;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="relpos">
     <div class="spacer"></div>
     <div id="anchor"></div>
