--- a/css/css-anchor-position/anchor-position-borders-001.html
+++ b/css/css-anchor-position/anchor-position-borders-001.html
@@ -34,7 +34,7 @@
   background: orange;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <!-- Margins/borders/paddings on the containing block. -->
   <div class="cb margins">
     <div class="spacer"></div>
