--- a/css/css-anchor-position/anchor-position-dynamic-001.html
+++ b/css/css-anchor-position/anchor-position-dynamic-001.html
@@ -62,6 +62,6 @@
 <script>
 document.body.offsetTop;  // Force layout.
 container.classList.add('after');
-checkLayout('#target');
+checkLayoutDelayed('#target');
 </script>
 </body>
