--- a/css/css-anchor-position/anchor-position-dynamic-003.html
+++ b/css/css-anchor-position/anchor-position-dynamic-003.html
@@ -84,14 +84,14 @@
     <div class="target"></div>
   </div>
 
-<script>
+<script type="module">
 for (const element of document.getElementsByClassName('target')) {
   element.dataset.offsetX = '50';
   element.dataset.offsetY = '70';
   element.dataset.expectedWidth = '50';
   element.dataset.expectedHeight = '70';
 }
-checkLayout('.target', false);
+await checkLayoutDelayed('.target', false);
 
 document.body.classList.add('after');
 for (const element of document.getElementsByClassName('target')) {
@@ -100,6 +100,6 @@ for (const element of document.getElementsByClassName('target')) {
   element.dataset.expectedWidth = '70';
   element.dataset.expectedHeight = '50';
 }
-checkLayout('.after .target');
+checkLayoutDelayed('.after .target');
 </script>
 </body>
