--- a/css/css-anchor-position/anchor-position-dynamic-004.html
+++ b/css/css-anchor-position/anchor-position-dynamic-004.html
@@ -40,6 +40,6 @@
   </div>
 <script>
 document.body.classList.add('after');
-checkLayout('.target');
+checkLayoutDelayed('.target');
 </script>
 </body>
