--- a/css/css-anchor-position/anchor-position-grid-001.html
+++ b/css/css-anchor-position/anchor-position-grid-001.html
@@ -61,7 +61,7 @@
   height: 5px;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div>
     <div class="spacer" style="height: 10px"></div>
     <div class="columns">
