--- a/css/css-anchor-position/anchor-position-multicol-003.html
+++ b/css/css-anchor-position/anchor-position-multicol-003.html
@@ -32,7 +32,7 @@
   background: lime;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="spacer" style="height: 10px"></div>
   <div class="relpos">
     <div class="columns">
