--- a/css/css-anchor-position/anchor-position-multicol-005.html
+++ b/css/css-anchor-position/anchor-position-multicol-005.html
@@ -45,7 +45,7 @@
   height: anchor-size(--a1 height);
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="spacer" style="height: 10px"></div>
   <div class="columns">
     <div class="relpos">
