--- a/css/css-anchor-position/anchor-position-multicol-006.html
+++ b/css/css-anchor-position/anchor-position-multicol-006.html
@@ -49,7 +49,7 @@
   height: anchor-size(--a2 height);
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="spacer" style="height: 10px"></div>
   <div class="relpos">
     <div class="columns">
