--- a/css/css-anchor-position/anchor-position-multicol-colspan-001.html
+++ b/css/css-anchor-position/anchor-position-multicol-colspan-001.html
@@ -43,7 +43,7 @@
   opacity: .3;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="relpos">
     <div class="spacer" style="height: 10px"></div>
     <div class="columns relpos">
