--- a/css/css-anchor-position/anchor-position-multicol-fixed-001.html
+++ b/css/css-anchor-position/anchor-position-multicol-fixed-001.html
@@ -48,7 +48,7 @@
   height: anchor-size(--a1 height);
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="transform">
     <div class="spacer" style="height: 10px"></div>
     <div class="columns">
