--- a/css/css-anchor-position/anchor-position-multicol-nested-001.html
+++ b/css/css-anchor-position/anchor-position-multicol-nested-001.html
@@ -48,7 +48,7 @@
   opacity: .3;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <p>The green box should be a union of blue boxes,
     and the purple box should be at the right-bottom of the green box.
   </p>
