--- a/css/css-anchor-position/anchor-query-fallback.html
+++ b/css/css-anchor-position/anchor-query-fallback.html
@@ -34,7 +34,7 @@
 }
 </style>
 
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div id="container">
     <div class="flex-item" id="a1"></div>
     <div class="flex-item"></div>
