--- a/css/css-anchor-position/anchor-size-writing-modes-001.html
+++ b/css/css-anchor-position/anchor-size-writing-modes-001.html
@@ -25,7 +25,7 @@
   writing-mode: vertical-rl;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="container">
     <div class="anchor1 vrl"></div>
 
