--- a/css/css-anchor-position/position-fallback-001.html
+++ b/css/css-anchor-position/position-fallback-001.html
@@ -56,7 +56,7 @@
   }
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <!-- If the `cb` is wider, the 1st `@try` fits. -->
   <div class="cb" style="width: 195px">
     <div class="spacer"></div>
