--- a/css/css-anchor-position/position-fallback-custom-property.html
+++ b/css/css-anchor-position/position-fallback-custom-property.html
@@ -52,7 +52,7 @@
   }
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="cb">
     <div class="spacer"></div>
     <div class="anchor1"></div>
