--- a/css/css-anchor-position/position-fallback-grid-001.html
+++ b/css/css-anchor-position/position-fallback-grid-001.html
@@ -60,7 +60,7 @@
   }
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div>
     <div class="spacer" style="height: 10px"></div>
     <div class="grid cb">
