--- a/css/css-anchor-position/anchor-name-multicol-002.html
+++ b/css/css-anchor-position/anchor-name-multicol-002.html
@@ -43,7 +43,7 @@
   height: anchor-size(--a1 height);
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="spacer"></div>
   <div class="columns">
     <div class="relpos">
