--- a/css/css-anchor-position/anchor-name-multicol-004.html
+++ b/css/css-anchor-position/anchor-name-multicol-004.html
@@ -41,7 +41,7 @@
   height: anchor-size(--a1 height);
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="spacer"></div>
   <div class="relpos">
     <div class="columns relpos">
