--- a/css/css-anchor-position/anchor-position-002.html
+++ b/css/css-anchor-position/anchor-position-002.html
@@ -44,7 +44,7 @@
   properties such as `transform` can create a containing block without setting
   the `position` property.
 -->
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div id="container">
     <div>
       <div id="anchor1"></div>
