--- a/css/css-anchor-position/anchor-position-inline-003.html
+++ b/css/css-anchor-position/anchor-position-inline-003.html
@@ -20,7 +20,7 @@
   position: absolute;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div id="container">
     <div>spacer</div>
     <div>
