--- a/css/css-anchor-position/anchor-position-inline-004.html
+++ b/css/css-anchor-position/anchor-position-inline-004.html
@@ -50,7 +50,7 @@ body > div {
   height: anchor-size(--a1 height);
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <!-- The inline anchor appear in a single line inline containing block. -->
   <div class="cb">
     <div>spacer</div>
