--- a/css/css-anchor-position/anchor-position-multicol-001.html
+++ b/css/css-anchor-position/anchor-position-multicol-001.html
@@ -27,7 +27,7 @@
   position: absolute;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div id="container">
     <div>spacer</div>
     <div class="columns">
