--- a/css/css-anchor-position/anchor-position-multicol-004.html
+++ b/css/css-anchor-position/anchor-position-multicol-004.html
@@ -52,7 +52,7 @@
   background: purple;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <p>The green box should be a union of blue boxes,
     and the purple box should be at the right-bottom of the green box.
   </p>
