--- a/css/css-anchor-position/anchor-size-minmax-001.html
+++ b/css/css-anchor-position/anchor-size-minmax-001.html
@@ -19,7 +19,7 @@
   position: absolute;
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <div class="container">
     <div class="anchor1"></div>
 
