--- a/css/css-anchor-position/position-fallback-002.html
+++ b/css/css-anchor-position/position-fallback-002.html
@@ -48,7 +48,7 @@
   }
 }
 </style>
-<body onload="checkLayout('.target')">
+<body onload="checkLayoutDelayed('.target')">
   <!-- The first `@try` overflows the inset-modifed containing block -->
   <div class="cb">
     <div class="anchor1"></div>
