--- a/css/css-anchor-position/anchor-position-dynamic-001.html
+++ b/css/css-anchor-position/anchor-position-dynamic-001.html
@@ -59,9 +59,9 @@
         data-offset-x=200 data-offset-y=100
         data-expected-width=300 data-expected-height=100></div>
   </div>
-<script>
+<script type="module">
 document.body.offsetTop;  // Force layout.
 container.classList.add('after');
-checkLayoutDelayed('#target');
+await checkLayoutDelayed('#target');
 </script>
 </body>
