--- a/css/css-anchor-position/anchor-position-dynamic-003.html
+++ b/css/css-anchor-position/anchor-position-dynamic-003.html
@@ -100,6 +100,6 @@ for (const element of document.getElementsByClassName('target')) {
   element.dataset.expectedWidth = '70';
   element.dataset.expectedHeight = '50';
 }
-checkLayoutDelayed('.after .target', true);
+await checkLayoutDelayed('.after .target', true);
 </script>
 </body>
