--- a/css/css-anchor-position/anchor-position-dynamic-004.html
+++ b/css/css-anchor-position/anchor-position-dynamic-004.html
@@ -38,8 +38,8 @@
          data-offset-x=50 data-offset-y=10
          data-expected-width=30 data-expected-height=20></div>
   </div>
-<script>
+<script type="module">
 document.body.classList.add('after');
-checkLayoutDelayed('.target');
+await checkLayoutDelayed('.target');
 </script>
 </body>
