--- a/css/css-anchor-position/anchor-position-dynamic-003.html
+++ b/css/css-anchor-position/anchor-position-dynamic-003.html
@@ -5,6 +5,7 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/resources/check-layout-th.js"></script>
+<script src="support/test-common.js"></script>
 <style>
 .containing-block {
   position: absolute;
@@ -91,7 +92,7 @@ for (const element of document.getElementsByClassName('target')) {
   element.dataset.expectedWidth = '50';
   element.dataset.expectedHeight = '70';
 }
-await checkLayoutDelayed('.target', false);
+await checkLayoutForAnchorPos('.target', false);
 
 document.body.classList.add('after');
 for (const element of document.getElementsByClassName('target')) {
@@ -100,6 +101,6 @@ for (const element of document.getElementsByClassName('target')) {
   element.dataset.expectedWidth = '70';
   element.dataset.expectedHeight = '50';
 }
-await checkLayoutDelayed('.after .target', true);
+await checkLayoutForAnchorPos('.after .target', true);
 </script>
 </body>
