--- a/css/css-anchor-position/anchor-position-dynamic-001.html
+++ b/css/css-anchor-position/anchor-position-dynamic-001.html
@@ -5,6 +5,7 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/resources/check-layout-th.js"></script>
+<script src="support/test-common.js"></script>
 <style>
 #container {
   position: relative;
@@ -62,6 +63,6 @@
 <script type="module">
 document.body.offsetTop;  // Force layout.
 container.classList.add('after');
-await checkLayoutDelayed('#target');
+await checkLayoutForAnchorPos('#target');
 </script>
 </body>
