--- a/css/css-anchor-position/anchor-position-dynamic-002.html
+++ b/css/css-anchor-position/anchor-position-dynamic-002.html
@@ -4,6 +4,7 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/resources/check-layout-th.js"></script>
+<script src="support/test-common.js"></script>
 <style>
 #container {
   position: relative;
@@ -41,7 +42,7 @@
     <div class="target" style="width: anchor-size(--a2 width)" data-expected-width=5></div>
   </div>
 <script type="module">
-await checkLayoutDelayed('.target', false);
+await checkLayoutForAnchorPos('.target', false);
 container.classList.add('after');
 for (const element of document.getElementsByClassName('target')) {
   if (element.dataset.offsetX === '5')
@@ -49,6 +50,6 @@ for (const element of document.getElementsByClassName('target')) {
   if (element.dataset.expectedWidth === '5')
     element.dataset.expectedWidth = '10';
 }
-await checkLayoutDelayed('.after .target', true);
+await checkLayoutForAnchorPos('.after .target', true);
 </script>
 </body>
