--- a/css/css-anchor-position/anchor-position-dynamic-004.html
+++ b/css/css-anchor-position/anchor-position-dynamic-004.html
@@ -4,6 +4,7 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/resources/check-layout-th.js"></script>
+<script src="support/test-common.js"></script>
 <style>
 .cb {
   position: relative;
@@ -40,6 +41,6 @@
   </div>
 <script type="module">
 document.body.classList.add('after');
-await checkLayoutDelayed('.target');
+await checkLayoutForAnchorPos('.target');
 </script>
 </body>
