--- a/css/css-anchor-position/anchor-position-grid-001.html
+++ b/css/css-anchor-position/anchor-position-grid-001.html
@@ -5,6 +5,7 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/resources/check-layout-th.js"></script>
+<script src="support/test-common.js"></script>
 <style>
 .cb {
   position: relative;
@@ -61,7 +62,7 @@
   height: 5px;
 }
 </style>
-<body onload="checkLayoutDelayed('.target')">
+<body onload="checkLayoutForAnchorPos('.target')">
   <div>
     <div class="spacer" style="height: 10px"></div>
     <div class="columns">
